--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
             </button>
         </div>
 
-        <div class="mobile-menu" data-menu>
+        <div class="mobile-menu is-hidden" data-menu>
             <div class="mobile-menu-container">
                 <div>
                     <button type="button" class="mobile-menu-close-btn" data-menu-close>
